Search endpoint added
